Version XXXX.XX.XX

- Removed links to favicons located in root directory.
- Removed Eclipse files from repository.
- Implemented query caching.
- Added email template for enquiry form.
- Fixed RSS feed bug.

Version 2013.5.14

- Added text editor stylesheet.
- Added placeholder images to sample site.
- Updated Xindi logo.
- Fixed bug that was preventing navigation links with sub level pages working.
- Hide meta tag form fields when generate meta tags automatically is selected.
- Add preview page links to admin.
- Changed version number format to 'YYYY.MM.DD'.