@@ -1,4 +1,4 @@
-<h1>Login</h1>
+<h1>Forgotten Password</h1>
 
 <?php 
 $userdata = $this->session->all_userdata();
@@ -6,7 +6,7 @@ $message = isset($message) ? $message : '';
 echo render_message($userdata, $message);
 ?>
 
-<form method="post" action="<?php echo site_url('security/dologin') ?>" id="login-form" class="clear">
+<form method="post" action="<?php echo site_url('security/doforgottenpassword') ?>" id="forgotten-password-form" class="clear">
 	<fieldset>
 		<div class="control-group">
 			<label class="control-label" for="email">Email Address *</label>
@@ -14,18 +14,10 @@ echo render_message($userdata, $message);
 				<input class="input-xlarge" type="text" name="email" id="email" value="" maxlength="50" placeholder="Email Address">
 			</div>
 		</div>						
-
-		<div class="control-group">
-			<label class="control-label" for="password">Password *</label>
-			<div class="controls">
-				<input class="input-xlarge" type="password" name="password" id="password" value="" maxlength="50" placeholder="Password">
-				<br><a href="<?php echo site_url('security/forgottenpassword') ?>">Forgotten Password?</a>
-			</div>
-		</div>			
 	</fieldset>
 	
 	<div class="form-actions">
-		<input type="submit" name="submit" id="submit" value="Login" class="btn btn-primary">
+		<input type="submit" name="submit" id="submit" value="Send Password" class="btn btn-primary">
 	</div>
 </form>
 
@@ -33,14 +25,12 @@ echo render_message($userdata, $message);
 <script>
 jQuery(function($) {
 	// form validation (http://docs.jquery.com/Plugins/Validation)
-	$("#login-form").validate({
+	$("#forgotten-password-form").validate({
 		rules:{
 			email:{required:true, email:true, maxlength:100}
-			, password:{required:true}
 		},
 		messages:{
 			email:{required:"Enter your email address", email:"Enter a valid email address"}
-			, password:{required:"Enter your password"}
 		}
 	});
 });
